--- a/index.html
+++ b/index.html
@@ -4,14 +4,171 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web developer portfoilo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
-<body>
-    <header>
-
+<body class="roboto-sans-normal">
+    <header class="header secondery-background">
+<nav>
+    <h3 class="nav-tittle">Ma<span class="text-primary">r</span>y</h3>
+    <ul>
+        <li><a class="dark-2" href="">portfoilo</a></li>
+<li><a class="dark-2" href="">Blog</a></li>
+<li><a href=""><button class="btn-primary">Hire me</button></a></li>
+    </ul>
+</nav>
+<div class="banner">
+    <div class="banner-content">
+<h4 class="banner-greetings dark-2">Hi, I am</h4>
+<h1 class="banner-tittle">Mary Handy</h1>
+<p class="banner-description">
+    Short what able cold new see hold.Friendly as an betrayed formely he.Morning because as to sociaty behave moments.
+</p>
+<button class="btn-primary">Downloade CV</button>
+<button class="btn-primary">Contact</button>
+    </div>
+    <img class="banner-profile-pic"src="handymary.jpg" alt="">
+</div>
     </header>
-    <main>
+    <main >
+<section class="about me secondery-background">
+    <h3 class="section-tittle">About Me</h3>
+    <p class="section-description">I am a passionate web designer who loves turning ideas into visually appealing and user-friendly websites. My goal is to create designs that not only look beautiful but also deliver a smooth and engaging experience for every visitor. I enjoy combining creativity with technical skills to build modern, responsive, and effective web designs that reflect each brands unique identity. Every project I work on is a chance to bring imagination to life through clean layouts, thoughtful color choices, and smart design solutions.
+    </p>
+      <div class="about-items">
+    <div class="about-item">
+      <p class="item-title">Name</p>
+      <p class="item-description">Mary Hardy</p>
+    </div>
+       <div class="about-item">
+      <p class="item-title">Email</p>
+      <p class="item-description">mary@example.com</p>
+    </div>
+    <div class="about-item">
+          <p class="item-title">Date of Birth</p>
+          <p class="item-description">26-10-1996</p>
+        </div>
+        <div class="about-item">
+              <p class="item-title">From</p>
+              <p class="item-description">Sylhet, Bangladesh</p>
+            </div>
+      </div>
+       <!--what is do srction start-->
+    <section class="skills">
+        <h3 class="section-tittle">What i do</h3>
+        <p class="section-dwscription">I am an experienced web developer who designs and builds responsive, user-friendly websites using HTML, CSS, and JavaScript to create clean, functional, and visually appealing online experiences. I have worked on various projects, focusing on modern design and smooth performance. My goal is to turn creative ideas into interactive, high-quality websites that stand out online.</P>
+            nce-sub-tittle"></h5>
+                        <div class="experience-description"></div>
+                    </div>
+                    <hr>
+            </section>
+            <div class="skills-container">
+              <!--.skill*4>img+h4.skill-tittle+p.skill-description-->  
+            <div class="skill">
+                <img src="js.jpg" alt="JavaScript">
+                <h4 class="skill-tittle">Vanila JavaScript</h4>
+                <p class="skill-description">Vanilla JavaScript is plain JavaScript used without libraries or frameworks. It helps create dynamic, interactive, and fast websites using only core JavaScript features.</p>
+            </div>
+            <div class="skill">
+                <img src="reactsjs.jpg" alt="reactsjs">
+                <h4 class="skill-tittle">Reactsjs</h4>
+                <p class="skill-description">React.js is a popular JavaScript library used to build fast and interactive user interfaces. It helps developers create reusable components, making web applications more efficient, dynamic, and easy to maintain.</p>
+            </div>
+
+             <div class="skill">
+                <img src="Node.js-Logo.jpg" alt="nodejs">
+                <h4 class="skill-tittle">Nodejs</h4>
+                <p class="skill-description">Node.js is a JavaScript runtime that lets developers run JavaScript on the server side. It is used to build fast, scalable, and efficient web applications using a single programming language for both front-end and back-end.</p>
+            </div>
+            <div class="skill">
+                <img src="mongodb_banner.jpg" alt="mongodb_banner">
+                <h4 class="skill-tittle">MongMongoDB</h4>
+                <p class="skill-description">MongMongoDB is a NoSQL database that stores data in flexible, JSON-like documents. It allows fast performance, easy scaling and quick changes to data structure, making it ideal for modern applications.
+                oDB</p>
+            </div>
+            </div>
+            <br>
+            
+            <section class="resume">
+                <h3 class="section-tittle">A Summary of My Resume</h3>
+                <div class="resume-container">
+<div class="resume-column">
+    <h3 class="resume-column-tittle">Experience</h3>
+    <div class="experience">
+    <h4 class="experience-tittle"></h4>
+    <h5 class="experience-sub-tittle"></h5>
+    <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
+</div>
+<hr>
+<div class="resume-column">
+    <h3 class="resume-column-tittle">My Education</h3>
+    <div class="experience">
+    <h4 class="experience-tittle">Master in computer Engineering</h4>
+    <h5 class="experience-sub-tittle">Heaverd University/2015-2017</h5>
+    <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
+</div>
+</div>
+<hr>
+   <div class="resume-column">
+    <h3 class="resume-column-tittle">My Education</h3>
+    <div class="experience">
+    <h4 class="experience-tittle">Master in computer Engineering</h4>
+    <h5 class="experience-sub-tittle">Heaverd University/2015-2017</h5>
+    <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
+    </div>
+
+<div class="resume-column">
+    <h3 class="resume-column-tittle">My Education</h3>
+    <div class="experience">
+    <h4 class="experience-tittle">Master in computer Engineering</h4>
+    <h5 class="experience-sub-tittle">Heaverd University/2015-2017</h5>
+    <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
+    </div>
+
+<div class="resume-column">
+    <h3 class="resume-column-tittle">My Education</h3>
+    <div class="experience">
+    <h4 class="experience-tittle">Master in computer Engineering</h4>
+    <h5 class="experience-sub-tittle">Heaverd University/2015-2017</h5>
+    <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
+    </div>
+<div class="resume-column">
+    <h3 class="resume-column-tittle">My Education</h3>
+    <div class="experience">
+    <h4 class="experience-tittle">Master in computer Engineering</h4>
+    <h5 class="experience-sub-tittle">Heaverd University/2015-2017</h5>
+    <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
+    </div>
+</div>
+<div class="text-center resume-downloade-cv">
+<button class="btn-primary">Downloade cv</button>
+</div>
+</div>
+ </section>
+    
 
     </main>
-    <footer></footer>
+
+    <footer class="secondery-background">
+    <div class="footer-column">
+<h3 class="section-tittle">Lets Connect</h3>
+<p>please fill out the form on this section to contact with me or call between 9:00 A.M and 8:00 P.M ET,Monday though Friday.</p>
+<div>
+    <a href=""><img src="images.jpg" alt=""></a>
+</div>
+    </div>
+    <br>
+    <div class="footer-column">
+<h3 class="section-tittle">Let's Inbox Me</h3>
+<from action="">
+    <input type="text"name=""id=""placeholder="Your name">
+    <input type="Email"name=""id=""placeholder="your Email">
+    <textarea name=""id=""cols="30"rows="20"placeholder="Message "></textarea>
+    <input class="btn-primary" type="submit"value="submit">
+</from>
+    </div>
+    </footer>
 </body>
 </html>
