added 3d.html file

--- a/style/index.html
+++ b/style/index.html
@@ -26,7 +26,7 @@
 <p class="banner-description">
     Short what able cold new see hold.Friendly as an betrayed formely he.Morning because as to sociaty behave moments.
 </p>
-<button class="btn-primary">Downloade CV</button>
+<button class="btn-primary"> <i class="fa-solid fa-download"></i> Downloade CV</button>
 <button class="btn-primary">Contact</button>
     </div>
     <img class="banner-profile-pic"src="handymary.jpg" alt="">
@@ -118,7 +118,7 @@
     <h5 class="experience-sub-tittle">Heaverd University/2015-2017</h5>
     <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
     </div>
-
+<hr>
 <div class="resume-column">
     <h3 class="resume-column-tittle">My Education</h3>
     <div class="experience">
@@ -126,7 +126,7 @@
     <h5 class="experience-sub-tittle">Heaverd University/2015-2017</h5>
     <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
     </div>
-
+<hr>
 <div class="resume-column">
     <h3 class="resume-column-tittle">My Education</h3>
     <div class="experience">
@@ -134,6 +134,7 @@
     <h5 class="experience-sub-tittle">Heaverd University/2015-2017</h5>
     <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
     </div>
+    <hr>
 <div class="resume-column">
     <h3 class="resume-column-tittle">My Education</h3>
     <div class="experience">
@@ -142,8 +143,9 @@
     <div class="expericence-description">List skill teachnology here.You can change the icon about Hardworking and technically skilled individual with hands-on experience in troubleshooting, maintenance, and equipment operation. Focused on safety and precision in every task.</div>
     </div>
 </div>
+<hr>
 <div class="text-center resume-downloade-cv">
-<button class="btn-primary">Downloade cv</button>
+<button class="btn-primary"></i>Downloade cv</button>
 </div>
 </div>
  </section>
